0710/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: test
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: demo
            port:
              number: 9090
        path: /demo1/
        pathType: Prefix
      - backend:
          service:
            name: rest
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: sboot 
            port:
              number: 8080
        path: /actuator 
        pathType: Prefix
          
status:
  loadBalancer: {}
